2007-05-01 Colin O'Flynn <coflynn@newae.com>

	* safemode.c: -Oops - bug in verbose output. Fixed.
	-Fixed handling of cases where programmer cannot read fuses (AVR910)
	* main.c: -Also fixing handling of cases where programmer cannot
	read fuses
	This should close one or more bugs (18803, 19570)

2007-05-01 Colin O'Flynn <coflynn@newae.com>

	* safemode.c: Added verbose output from safemode routines.

2007-03-25 Colin O'Flynn <coflynn@newae.com>

	* stk500generic.c: Forgot to close the serial port before trying to
	open it again, caused problems on Windows machines.
	Closes bug #19411

2007-02-26 Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.conf.in: Add the AT90PWM2/3B devices.

2007-02-02 Thomas Fischl <tfischl@gmx.de>

	* usbasp.c: Changed return value of function usbasp_initialize to stop
	avrdude on communication errors between programmer and target.
	Closes bug #18581: safemode destroys fuse bits

2007-02-01 Joerg Wunsch <j@uriah.heep.sax.de>

	* config_gram.y: Remove duplicate definition of token K_WRITEPAGE

2007-01-30 Joerg Wunsch <j@uriah.heep.sax.de>

	* butterfly.c: Implement ATmega256x support for butterfly/avr109.

2007-01-30 Joerg Wunsch <j@uriah.heep.sax.de>

	* configure.ac: Fix subdir handling.  Now finally, "make
	distcheck" will include the documentation into the tarball even if
	the configure had been run without the --enable-doc.

2007-01-30 Joerg Wunsch <j@uriah.heep.sax.de>

	* safemode.c: Obtain progname from avrdude.h rather than trying to
	roll our own (duplicate) copy of it.
	* avr910.c: Constify char pointers.
	* avrpart.c: (Ditto.)
	* avrpart.h: (Ditto.)
	* butterfly.c: (Ditto.)
	* config.c: (Ditto.)
	* config.h: (Ditto.)
	* jtagmkI.c: (Ditto.)
	* jtagmkII.c: (Ditto.)
	* par.c: (Ditto.)
	* pgm.c: (Ditto.)
	* pgm.h: (Ditto.)
	* serbb_posix.c: (Ditto.)
	* serbb_win32.c: (Ditto.)
	* stk500.c: (Ditto.)
	* stk500v2.c: (Ditto.)
	* usbasp.c: (Ditto.)

2007-01-29 Joerg Wunsch <j@uriah.heep.sax.de>
